<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_BasedeDatos"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="serif-monospace"
        android:layout_marginTop="250dp"
        android:textSize="30dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnCrearDB"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_CrearDB"
        android:textSize="21sp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_Registrarse"
        android:textSize="21sp"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/txtCorreoIniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_correo"
        android:inputType="textEmailAddress"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/txtContraseñaIniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_Contraseña"
        android:textSize="24sp"/>
    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_IniciarSesison"
        android:textSize="21sp"
        android:layout_gravity="center"/>


</LinearLayout>