<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MuestraActivity">

    <TextView
        android:id="@+id/txtIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_EnviarInfo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="serif-monospace"
        android:layout_marginTop="250dp"
        android:textSize="30dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_correo"
        android:inputType="textEmailAddress"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/txtContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_Contraseña"
        android:textSize="24sp"/>


    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Enviar"
        android:textSize="21sp"/>
</LinearLayout>